[gd_scene load_steps=11 format=3 uid="uid://dxxneuri6dj54"]

[ext_resource type="Script" path="res://cats/sonico/gatoSonico.gd" id="1_j3vj3"]
[ext_resource type="Texture2D" uid="uid://bjw4np5ggxg1u" path="res://assets/cats/gatoSonico.png" id="2_x0cdg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1ivpd"]
atlas = ExtResource("2_x0cdg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o1u2"]
atlas = ExtResource("2_x0cdg")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_220tl"]
atlas = ExtResource("2_x0cdg")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv16t"]
atlas = ExtResource("2_x0cdg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w6gc"]
atlas = ExtResource("2_x0cdg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_o2fqj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ivpd")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o1u2")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_220tl")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv16t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w6gc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dgo47"]
size = Vector2(25.5, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhufm"]
size = Vector2(34, 24)

[node name="Gato" type="Area2D"]
script = ExtResource("1_j3vj3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(17, 6)
sprite_frames = SubResource("SpriteFrames_o2fqj")
animation = &"attack"
autoplay = "idle"

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(16.75, 12)
shape = SubResource("RectangleShape2D_dgo47")
debug_color = Color(0.846966, 0.376408, 3.85046e-07, 0.42)

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionCollision" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(17, 12)
shape = SubResource("RectangleShape2D_vhufm")
debug_color = Color(0, 0.590072, 0.753842, 0.42)

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
